<resources>
    <string name="app_name">Reminder4U</string>
    <string name="photoLady">photoLady</string>

    <string name="drawer.open">open</string>
    <string name="drawer.close">close</string>

    <string name="drawer_welcome_text">Hello,\nI hope you\'re\nhaving a\nwonderful day!</string>
    <string name="today">Today</string>
    <string name="upcoming">Upcoming</string>
    <string name="overdue">Overdue</string>
    <string name="recycler_view_preview_text">Jake\'s Birthday</string>
    <string name="reminderPhoto">ReminderPhoto</string>
    <string name="recycler_view_clock_icon">clockIcon</string>
    <string name="recycler_view_time_preview">08:00 AM</string>
    <string name="recycler_view_favorites_icon">favoritesIcon</string>
    <string name="recycler_view_edit_icon">editIcon</string>
    <string name="vehicleOption">vehicleOption</string>
    <string name="recycler_view_direction_time_preview">15 min</string>
    <string name="addReminderButton">addReminderButton</string>
    <string name="what_do_you_have_to_do">What do you have to do?</string>
    <string name="notes">Notes</string>
    <string name="image">Image</string>
    <string name="due_date">Due Date</string>
    <string name="due_time">Due Time</string>
    <string name="notification">Notification</string>
    <string name="location_assistant">Location Assistant</string>
    <string name="carTransportation">carTransportation</string>
    <string name="googleMapsIcon">googleMapsIcon</string>
    <string name="estimated_time">Estimated time:</string>
    <string name="google_time_preview">15 minutes</string>
    <string name="categorize">Categorize</string>
    <string name="cancel_icon">cancel_icon</string>
    <string name="complete_icon">complete_icon</string>
    <string name="repeat">Repeat</string>
    <string name="walkingTransport">walkingTransport</string>

</resources>